Added some behind the scenes info

--- a/docs/Flatbean testground.ipynb
+++ b/docs/Flatbean testground.ipynb
@@ -18,7 +18,11 @@
     "\n",
     "In the next cell we define the instrument instance and create a virtual instrument so that this notebook can also be used without an AWG at hand. Furthermore we define a function to send and plot the forged sequence.\n",
     "\n",
-    "**you need to have the test_requirements.txt installed**"
+    "**you need to have the test_requirements.txt installed**\n",
+    "\n",
+    "**For uploading the forged sequences to the AWG5014 you need PR1167**\n",
+    "\n",
+    "in principle the operation is also possible with other tektronics awgs, but we changed the format of the forged sequence slightly (List instead of Dictionary). These changes will shortly be incorporated into the drivers."
    ]
   },
   {
@@ -95,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and the actual creation is (almost) self explanatory:"
+    "and the actual creation is (almost) self explanatory: (Here the two as the dictionary key stands for the channel two of the used AWG. Later we will be using routing i.e. use abstract names for the channels and route them with a map to the physical channels)"
    ]
   },
   {
@@ -104,6 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# here sine is a function that creates an object of type `Segment`\n",
     "seg = sine(duration=1e-3, frequency=1e3)\n",
     "# create an element with a single segment on channel `2`\n",
     "e = Element({2:seg})\n",
@@ -136,6 +141,33 @@
    ],
    "source": [
     "send_and_plot(fs, SR=1e6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### behind the scenes\n",
+    "The principle concept is to use standard python containers as much as possible. A Sequence for example, is simply represented by a list of elements `Sequence.elements` (Or possibly a list mixed type with elements and sequences to support subsequences).\n",
+    "\n",
+    "Elements are mainly represented by a dictionary `Elements.segments` containing its segments indexed by the respective channel ids/channel names. On top of that there is a dictionary (`Element.sequencing`) containing the sequencing information, like how many times the element should be repeated, jump targets, etc. Elements have an addtional `Element.local_context` and can remember their assigned `Element._transformation`,  which will be explained in the sections 'Transformations' and 'Making Parametric Sequences'.\n",
+    "\n",
+    "The function `sine` is a simple convenience wrapper. The first line of this example could be replaced by:\n",
+    "```\n",
+    "# instead of: `seg = sine(duration=1e-3, frequency=1e3)` one can use:\n",
+    "seg = Segment(function='sine', duration=1e-3, frequency=1e3)\n",
+    "```\n",
+    "A `Segment` holds a function and its arguments and a method `Segment.forge` that renders the function, using the arguments, into a numpy array. These functions received the name 'atoms' in the previous version of Broadbean, because they form the smallest building block of a sequence.\n",
+    "An atom is required to take keyword arguments only, one of which is the numpy array `time`, representing the time axis and to return a numpy array of the rendered function. The used example here is defined in 'atoms.py':\n",
+    "```\n",
+    "@atom\n",
+    "def sine(time, frequency, amplitude=1, phase=0):\n",
+    "    return amplitude*np.sin(frequency*2*np.pi*time + phase)\n",
+    "```\n",
+    "The `@atom` decorator simply wrappes the function such that it returns a `Segment` and can be used as in the example.\n",
+    "\n",
+    "The idea with the atoms is that there is a uniquely named and version controlled collection, such that an atom name and its parameters will be sufficient meta data to resconstruct the original waveform.\n",
+    "\n"
    ]
   },
   {
@@ -186,6 +218,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### behind the scenes\n",
+    "The `SegmentGroup` class inherits like the `Segment` class from a common base class `_BaseSegment`. It simply stores a list `SegmentGroup._segments` of segments and upon forging calls the respective forging function and concatenates the resulting array.\n",
+    "\n",
+    "On top of that it also has, just like the Elements, a memory of a 'transformation' that has been supplied upon construction `SegmentGroup._transformation`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Symbols\n",
     "The most significant improvement is that one can define _symbols_. That means we can define a prototype of/recepie for a sequence and parametrize it. A symbol is nothing but a property that has not been given a concrete numeric value but a placeholder for evaluation at forging time. This is simply realized by passing a `str` as the value of a given property\n",
     "To follow up with the previous example we could specify the amplitude of that pi-pulse:"
@@ -204,7 +246,7 @@
     "\n",
     "pi_pulse = SegmentGroup(seg1, seg2, seg3,\n",
     "                        duration = 1e3)\n",
-    "s = Sequence([Element({1:pi_pulse})])\n",
+    "s = Sequence([Element({2:pi_pulse})])\n",
     "# here the sequence s is a recepy for building a pi-pulse for any amplitude\n",
     "# for getting the actual waveform we need to specify the context and pass it to the forge method\n",
     "context = {'pi_amp': 0.5}\n",
@@ -229,6 +271,21 @@
    ],
    "source": [
     "send_and_plot(fs, SR=1e6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### behind the scenes\n",
+    "So far the usage of the symbols is not quite clear. We could also imagine to just access the value that we want to change by identifying the element with a name or id and the segment via the channel like so:\n",
+    "```\n",
+    "# sequence(List)->element(Dict)->SegementGroup(List)->segments(Member)->value\n",
+    "s.elements[0].segments[2]._segments[1]._properties['amplitude'] = 0.5\n",
+    "```\n",
+    "But as soon as a vaule gets used in multiple places, one would have to create an additional mapping of where a value needs to be changed. With the symbols we only need to take care of giving unique names and their occurences will be found for us.\n",
+    "\n",
+    "The leading priciple is 'late evaluation'. This enables maximum flexibility at the cost of late failure. This means that symbols only become replaced by their values on forging time where errors may occur due to a maldefined sequence. However, Segements and Elements can be forged individually by `Segment.forge` and `Element.forge` when an appropiate context and sample rate is supplied."
    ]
   },
   {
@@ -289,6 +346,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### behind the scenes\n",
+    "The presented implementation of transformations aims at maximum flexibility at the cost of safety and ease of use. It is meant to be an open interface for higher level abstraction that make their use more convenient. Ideally there will be only transformations that, like the atoms, come from a fixed collection and can thereby be simply included in the metadata.\n",
+    "\n",
+    "One example of this would be a linear solver: Here we define a bunch of symbols and their linear dependence in the form of their respective coefficients (clear metadata). The solver needs to know the required symbols (yet to be implemented) and can calculate them from the given context via standard linear algebra methods.\n",
+    "\n",
+    "If you can come up with a real world example that does require non-linear coefficients, let us know ;-)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Making Parametric Sequences\n",
     "The next logical step is to harness the power of changing symbol values of an element to create a sequence: Here a pulse sequence of centered pulses of increasing length is created."
    ]
@@ -315,6 +384,7 @@
     "                        transformation=keep_total_duration_constant)\n",
     "\n",
     "e = Element({1:pi_pulse})\n",
+    "# `in_context` is a function that simply copies a Segement/Element and assigns a `local_context`\n",
     "s = Sequence([in_context(e, pulse_duration=t) for t in np.linspace(0.1e-3,1e-3,5)])\n",
     "\n",
     "# here the sequence s is a recepy for building a pi-pulse for any amplitude\n",
@@ -717,6 +787,13 @@
    ],
    "source": [
     "fs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Real World examples"
    ]
   },
   {
