More Notebook commnets

--- a/docs/Flatbean testground.ipynb
+++ b/docs/Flatbean testground.ipynb
@@ -652,7 +652,7 @@
     "\n",
     "It is desirable to have serialization at the highest possible level, i.e. that not the whole forged sequence gets saved but rather the recepie to create it.\n",
     "\n",
-    "One could imagine a simple DSL like yaml that would look like this:"
+    "One could imagine a simple DSL like yaml that would look like this: (this is not finished yet...)"
    ]
   },
   {
@@ -684,39 +684,7 @@
     "sequence:\n",
     "    - e\n",
     "    - e\n",
-    "    \n",
-    "\n",
-    "from broadbean.routing import route\n",
-    "\n",
-    "seg1 = sine(duration='excite_time', phase=np.pi/2, amplitude='amp', frequency=1e3)\n",
-    "# default arguments can be used\n",
-    "seg2 = sine(duration='readout_time', frequency=1e3)\n",
-    "\n",
-    "m1 = on(duration='excite_time')\n",
-    "m2 = off(duration='readout_time')\n",
-    "\n",
-    "gs = SegmentGroup(seg1, seg2,\n",
-    "                  duration='total_duration')\n",
-    "\n",
-    "ms = SegmentGroup(m1, m2,\n",
-    "                  duration='total_duration')\n",
-    "\n",
-    "e = Element({'MyOutputChannel':gs,\n",
-    "             'MyMarkerChannel':ms},\n",
-    "            {'nr_rep':2})\n",
-    "\n",
-    "s = Sequence([e, e])\n",
-    "times = {'readout_time': 1e-3,\n",
-    "         'excite_time': 2e-3}\n",
-    "\n",
-    "fs = s.forge(SR=1e6, context=times)\n",
-    "\n",
-    "routing_dict = {'MyOutputChannel': ('AWG5014', 1),\n",
-    "                'MyMarkerChannel': ('AntoherInstrument', '1M1')}\n",
-    "\n",
-    "fs_awg = route(fs, routing_dict, awg)\n",
-    "# do the same thing for the other instrument\n",
-    "# fs_other = route(fs, routing_dict, ohter_instrument)"
+    "    "
    ]
   },
   {
@@ -724,7 +692,7 @@
    "metadata": {},
    "source": [
     "## Forge as meta data only\n",
-    "For the time being the sequences can be stored as meta data. Instead of rendering the segments out in the form of an np.ndarray, the atom name and the arguments are stored."
+    "For the time being the sequences can only be stored as meta data in a clunky way. Instead of rendering the segments out in the form of an np.ndarray, the atom name and the arguments are stored. This requires only a finite amount of memory and enables to reconstruct any sequence. (The reconstruction function does not exist yet)"
    ]
   },
   {
