add support for zero length atoms

--- a/docs/Flatbean testground.ipynb
+++ b/docs/Flatbean testground.ipynb
@@ -682,21 +682,40 @@
     }
    ],
    "source": [
-    "segments:\n",
-    "    seg1:\n",
-    "        type: sine\n",
-    "        duration: excite_time\n",
-    "elements:\n",
-    "    e:\n",
-    "        channels:\n",
-    "            MyOutputChannel: seg1\n",
+    "rabi:\n",
+    "    template_element:\n",
+    "        duration: total_duration\n",
+    "        segments:\n",
+    "            main_channel:\n",
+    "                - GroupSegment:  # driving\n",
+    "                    duration: driving_stage_duration\n",
+    "                    segmetns:\n",
+    "                        - sine:\n",
+    "                            duration: ite_time\n",
+    "                            frequency: blah\n",
+    "                - GroupSegment:  # readout\n",
+    "                    duration: readout_stage_duration\n",
+    "                    segmetns:\n",
+    "                        - zero: {duration: readout_delay}\n",
+    "                        - flat: {duration: readout_duration, value=readout_amplitude}\n",
+    "                        - zero: {duration: post_readout_duration}\n",
+    "            alazar_marker:\n",
+    "                - off: {duration=driving_stage_duration}\n",
+    "                - marker_pulse:\n",
+    "                    duration: readout_stage_duration\n",
+    "                    delay: pre_marker_duration\n",
+    "                    marker_duration: readout_marker_duration\n",
+    "        transformation:\n",
+    "            - post_readout_duration:\n",
+    "                - [1, readout_stage_duration]\n",
+    "                - [-1, readout_delay]\n",
+    "                - [-1, readout_duration]\n",
+    "            - pre_marker_duration:\n",
+    "                - [1, readout_delay]\n",
+    "                - [-1, readout_marker_delay]\n",
+    "        local_context:\n",
     "        sequencing:\n",
-    "            nrep: 3\n",
-    "            \n",
-    "sequence:\n",
-    "    - e\n",
-    "    - e\n",
-    "    "
+    "    initial_element:\n"
    ]
   },
   {
