--- a/docs/Flatbean Tutorial.ipynb
+++ b/docs/Flatbean Tutorial.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Pulsebuilding Tutorial Flatbean Version\n",
     "Yet another pulse building library ;-).\n",
+    "\n",
     "This new version of broadbean is a major rebuild, with the main difference that one does not have to define all values directly when building the sequence but can simply provide a placeholder string, a *symbol*, and specify the a list of symbols when the sequence is rendered, or *forged* as it is called here. Furthermore one can also define dependencies of those symbols to create a template with the symbols as the relevant input parameters.\n",
     "\n",
     "The main structure of a sequence has changed only slightly: A sequence is made up of a list of elements. Each element contains a waveform for each channel. These waveforms are called segments here and can be concatenated via so called group segments. The waveform of a segment is defined by an *atom* the smallest building block of a sequence. An atom simply is a pyhton function that takes time stamps as an t axis as in input plus other parameters to return a numpy array representing the wave form  (i.e. return np.sin(a*t+b)).\n",
@@ -892,6 +893,29 @@
    "source": [
     "Here the copy can have a changed new local context and the symbol 'flex_time' is only defined in the scope of each element."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Future Features\n",
+    "\n",
+    "\n",
+    "This library is still in a beta stage and has many bugs and no validation. Things that are going to change soon are:\n",
+    "- make all objects really stateful (e.g.a copy method for SegmentGroup)\n",
+    "- expose some of the _members so that the objects can be changed (e.g SegmentGroup.segments)\n",
+    "- add local context to GroupSegement\n",
+    "- implement a proper serialization\n",
+    "- provide support for other tektronix awgs\n",
+    "- full support for subsequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
