--- a/docs/Example_Write_Read_JSON.ipynb
+++ b/docs/Example_Write_Read_JSON.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2012,12 +2012,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read and Write Element from JSON file Tutorial"
+    "## Read and Write Element from JSON file Tutorial\n",
+    "Note only works if the Element is generated from BluePrints not if the Elements contains part generated directly form a numpy array "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -3012,7 +3013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -3973,7 +3974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3989,7 +3990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -4008,12 +4009,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read and Write Sequence from JSON file Tutorial"
+    "## Read and Write Sequence from JSON file Tutorial\n",
+    "Note only works if the Element is generated from BluePrints not if the Elements contains part generated directly form a numpy array "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -5041,7 +5043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5051,7 +5053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5067,7 +5069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5076,7 +5078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -6036,7 +6038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -6055,12 +6057,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ekstras"
+    "# Ekstras\n",
+    "Example of how read and write blueprint from/to Sequence json file if needed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6071,7 +6074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6090,7 +6093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6099,7 +6102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
