--- a/docs/changes/0.11.0.rst
+++ b/docs/changes/0.11.0.rst
@@ -1,7 +1,7 @@
 Changelog for broadbean 0.11.0
 ==============================
 
-The July 2022 release of broadbean with many great improvments for modernizing broadbeans infrastructure.
+The July 2022 release of broadbean with many great improvements for modernizing broadbean's infrastructure.
 
 
 Breaking Changes:
