avoid manual anchors
fixes problems with links in nbsphinx 0.9.2 but breaks due to non unique labels
https://github.com/spatialaudio/nbsphinx/issues/748

--- a/docs/examples/Pulse_Building_Tutorial.ipynb
+++ b/docs/examples/Pulse_Building_Tutorial.ipynb
@@ -6,23 +6,22 @@
    "source": [
     "# Pulsebuilding tutorial\n",
     "\n",
-    "## Table of Contents <a class=\"anchor\" id=\"toc\"></a>\n",
+    "## Table of Contents\n",
     "\n",
-    " * [Lingo](#lingo)\n",
-    " * [Blueprints](#blueprints)\n",
-    "   * [Basic blueprinting](#basicbp)\n",
-    "   * [Markers](#markers)\n",
-    "   * [Modifying blueprints](#bp-modify)\n",
-    "   * [Special segments](#specialsegments)\n",
-    "   * [Timesteps](#timesteps)\n",
+    " * [Lingo](#Lingo)\n",
+    " * [Blueprints](#Blueprints)\n",
+    "   * [Basic blueprinting](#Basic-blueprinting)\n",
+    "   * [Markers](#Markers)\n",
+    "   * [Modifying blueprints](#Modifying-blueprints)\n",
+    "   * [Special segments](#Special-segments)\n",
     "\n",
-    " * [Elements](#elements)\n",
-    " * [Sequences](#sequences)\n",
-    "   * [Tektronix AWG 5014 output](#awg)\n",
-    "     * [Delays and filter compensation](#compensation)\n",
-    "   * [Sequences varying parameters](#seq-vary)\n",
+    " * [Elements](#Elements)\n",
+    " * [Sequences](#Sequences)\n",
+    "   * [Tektronix AWG 5014 output](#Tektronix-AWG-5014-output)\n",
+    "     * [Delays and filter compensation](#Delays-and-filter-compensation)\n",
+    "   * [Sequences varying parameters](#Sequences-varying-parameters)\n",
     "\n",
-    "## Lingo <a class=\"anchor\" id=\"lingo\"></a>\n",
+    "## Lingo\n",
     "\n",
     "Let's settle on a vocabulary. At the highest level, we construct **sequences**. These sequences will eventually be uploaded to an AWG, e.g. the Tektronix AWG 5014. Each sequence consists of several **elements** than again consist of a number of **channels**. On each channel reside a **waveform** and two **markers**. The waveform and markers may either be added as numpy arrays or as **blueprint**. A blueprint is a set of instructions for making a waveform and two markers and consists of several **segments**\n",
     "\n",
@@ -88,9 +87,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Blueprints <a class=\"anchor\" id=\"blueprints\"></a> \n",
+    "# Blueprints \n",
     "\n",
-    "## Basic blueprinting <a class=\"anchor\" id=\"basicbp\"></a> \n",
+    "## Basic blueprinting\n",
     "([back to ToC](#toc))\n",
     "\n",
     "In this section we show how to construct basic blueprints. The units of the vertical axis is **volts** and the units of the horizontal axis (the durations) is **seconds**."
@@ -2567,7 +2566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Markers <a class=\"anchor\" id=\"markers\"></a> \n",
+    "## Markers \n",
     "([back to ToC](#toc))\n",
     "\n",
     "All markers are OFF by default. Markers can be added to a blueprint (switched ON) in two different ways. Either a marker is specified by its ON time in *absolute time* or by its ON time *relative* to a certain segment."
@@ -5002,7 +5001,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modifying blueprints <a class=\"anchor\" id=\"bp-modify\"></a>\n",
+    "## Modifying blueprints\n",
     "([back to ToC](#toc))"
    ]
   },
@@ -7409,7 +7408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Special segments <a class=\"anchor\" id=\"specialsegments\"></a>\n",
+    "## Special segments</a>\n",
     "([back to ToC](#toc))"
    ]
   },
@@ -9021,7 +9020,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Elements <a class=\"anchor\" id=\"elements\"></a>\n",
+    "# Elements\n",
     "([back to ToC](#toc))\n",
     "\n",
     "Elements are containers containing blueprints. A valid element consists of blueprints that all have the same number of points and the same overall duration."
@@ -10684,7 +10683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sequences <a class=\"anchor\" id=\"sequences\"></a>\n",
+    "# Sequences\n",
     "([back to ToC](#toc))\n",
     "\n",
     "Finally, we have reached the top level of the module: sequences. Unsurprisingly, sequences are containers containing elements. All elements in a sequence must specify the same channels."
@@ -11580,7 +11579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tektronix AWG 5014 output <a class=\"anchor\" id=\"awg\"></a>\n",
+    "## Tektronix AWG 5014 output\n",
     "([back to ToC](#toc))\n",
     "\n",
     "The sequence object can output a tuple matching the call signature of the QCoDeS Tektronix AWG 5014 driver.\n",
@@ -11593,9 +11592,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -12466,7 +12463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Delays and filter compensation<a class=\"anchor\" id=\"compensation\"></a>\n",
+    "### Delays and filter compensation\n",
     "([back to ToC](#toc))\n",
     "\n",
     "In a real experimental setting, the signal transmission line may distort and/or delay the pulse sequence. The Sequence object can perform some compensation for this when making the `.awg` file."
@@ -13299,7 +13296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sequences varying parameters <a class=\"anchor\" id=\"seq-vary\"></a>\n",
+    "## Sequences varying parameters\n",
     "([back to ToC](#toc))\n",
     "\n",
     "The module contains a few wrapper functions to easily generate sequences with some parameter(s) varying throughout the sequence. First two examples where a Base element is provided and varied, then an example where an existing Sequence is repeated."
@@ -17383,7 +17380,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -17391,7 +17391,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -17405,9 +17405,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
