run ruff on notebooks too

--- a/docs/examples/Example_Write_Read_JSON.ipynb
+++ b/docs/examples/Example_Write_Read_JSON.ipynb
@@ -19,14 +19,9 @@
     "%matplotlib nbagg\n",
     "import broadbean as bb\n",
     "from broadbean.plotting import plotter\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "mpl.rcParams['figure.figsize'] = (8, 3)\n",
-    "mpl.rcParams['figure.subplot.bottom'] = 0.15 \n",
-    "import yaml\n",
-    "import re\n",
-    "import json"
+    "mpl.rcParams['figure.subplot.bottom'] = 0.15 "
    ]
   },
   {
@@ -6079,7 +6074,7 @@
    "outputs": [],
    "source": [
     "def writeblueprint(blueprint, path:str,SR:float = 1e9,SeqAmp:float = 10e-3,SeqOffset:float = 0):# -> None\n",
-    "    if blueprint.SR == None:\n",
+    "    if blueprint.SR is None:\n",
     "        blueprint.setSR(SR)\n",
     "    elemtmp = bb.Element()\n",
     "    seqtmp = bb.Sequence()\n",
