run pyupgrade with ruff

--- a/docs/examples/Pulse_Building_Tutorial.ipynb
+++ b/docs/examples/Pulse_Building_Tutorial.ipynb
@@ -223,9 +223,9 @@
    ],
    "source": [
     "# A blueprint has a handful of different lengths one may check\n",
-    "print('Number of points in blueprint: {}'.format(bp1.points))\n",
-    "print('Length of blueprint in seconds: {}'.format(bp1.duration))\n",
-    "print('Number of segments in blueprint: {}'.format(bp1.length_segments))\n"
+    "print(f'Number of points in blueprint: {bp1.points}')\n",
+    "print(f'Length of blueprint in seconds: {bp1.duration}')\n",
+    "print(f'Number of segments in blueprint: {bp1.length_segments}')\n"
    ]
   },
   {
@@ -629,9 +629,9 @@
    ],
    "source": [
     "# An element has several features\n",
-    "print('Designated channels: {}'.format(elem1.channels))\n",
-    "print('Total duration: {} s'.format(elem1.duration))\n",
-    "print('Sample rate: {} (Sa/S)'.format(elem1.SR))"
+    "print(f'Designated channels: {elem1.channels}')\n",
+    "print(f'Total duration: {elem1.duration} s')\n",
+    "print(f'Sample rate: {elem1.SR} (Sa/S)')"
    ]
   },
   {
