sort imports with ruff

--- a/docs/examples/Filter_compensation.ipynb
+++ b/docs/examples/Filter_compensation.ipynb
@@ -41,7 +41,12 @@
     "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from broadbean.ripasso import applyRCFilter, applyInverseRCFilter, applyCustomTransferFunction"
+    "\n",
+    "from broadbean.ripasso import (\n",
+    "    applyCustomTransferFunction,\n",
+    "    applyInverseRCFilter,\n",
+    "    applyRCFilter,\n",
+    ")"
    ]
   },
   {
